resolved sidebar bottom serach bar not visible in low resolution devices

--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -125,3 +125,7 @@ img{
 .glyphicon {
     color: #fff;
 }
+
+#main-search form .input-group input {
+    margin-bottom: 50px;
+}
